# update

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  SECURITY.md  TODO.md
include/ungive/: update.hpp
include/ungive/detail/: common.h  crypto.h  downloader.h  github.h  operations.h  types.h  util.h  verifiers.h
include/ungive/detail/win/: zip.h
include/ungive/internal/: crypto.h  types.h  util.h  zip.h
include/ungive/internal/win/: startmenu.h
include/ungive/update/: manager.hpp  updater.hpp
include/ungive/update/detail/: common.h  downloader.h  github.h  launcher.h  log.h  operations.h  types.h  verifiers.h
include/ungive/update/internal/: crypto.h  sentinel.h  types.h  util.h  zip.h
include/ungive/update/internal/win/: lock.h  process.h  startmenu.h
include/update/: manager.hpp  updater.hpp
include/update/detail/: common.h  downloader.h  github.h  operations.h  verifiers.h
include/update/internal/: crypto.h  sentinel.h  types.h  util.h  zip.h
include/update/internal/win/: process.h  startmenu.h
test/: common_test.cpp  integration_test.cpp  manager_test.cpp  update_test.cpp  util_test.cpp  version_number_test.cpp  win_test.cpp
